# ayu-jetbrains

./: .editorconfig  .gitignore  .linear.toml  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  codecov.yml  detekt-baseline-test.xml  detekt.yml  gradle.properties  proguard-rules.pro  pyproject.toml  settings.gradle.kts  zizmor.yml
.claude/: settings.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  claude-code-review.yml  claude.yml  codeql.yml  release.yml  semgrep.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: features.yml
scripts/: README.md  _plugin_xml.py  check-consistency.py  check-consistency.sh  check-json-consistency.py  generate_campaign.py  guard-linter-configs.sh  guard-test-source-reads.py  pyproject.toml  test-verify-plugin-verifier.py  verify-bytecode.py  verify-bytecode.sh  verify-docs.py  verify-font-fallback-urls.py  verify-plugin-verifier.py  verify-proguard-keeps.py  verify-proguard-keeps.sh  verify-theme-json.py  verify-theme-xml.py
scripts/tests/: test-generate-campaign.py  test-release-policy.py  test-verify-font-fallback-urls.py  test-verify-plugin-verifier.py
scripts/verify_docs/: __init__.py  changelog.py  cli.py  features.py  git_utils.py  inventory.py  keywords.py  marketplace.py  paths.py  plugin_xml.py  report.py  required_links.py  screenshots.py  settings_badges.py  stamps.py
(+665 files in other folders)
